Add LKDN meta properties

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:og="http://www.w3.org/1999/xhtml">
   <head>
     <meta charset="utf-8" />
     <link rel="apple-touch-icon" sizes="57x57" href="%PUBLIC_URL%/apple-icon-57x57.png">
@@ -16,6 +16,10 @@
     <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <meta property='og:title' content='Portfolio'/>
+    <meta property='og:image' content="%PUBLIC_URL%/avatar.jpeg"/>
+    <meta property='og:description' content='Web Portfolio built using React + Bulma + Github Pages. Made by Diego Garcia'/>
+    <meta property='og:url' content="//gdos.dev" />
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
