--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <meta property='og:title' content='Portfolio'/>
     <meta property='og:image' content="%PUBLIC_URL%/avatar.jpeg"/>
-    <meta property='og:description' content='Web Portfolio built using React + Bulma + Github Pages. Made by Diego Garcia'/>
+    <meta property='og:description' content='Web Portfolio built using React + Bulma + Github Pages. Made by Diego Garcia. available on GitHub! https://github.com/garciasdos/'/>
     <meta property='og:url' content="//gdos.dev" />
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
